# AgroESG-Carbon-Compliance

./: .dockerignore  .envrc  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  devenv.nix  export_to_geoparquet.py  export_to_parquet.py  main.py  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: etl.yml
.streamlit/: config.toml
agro_credit_transform/: .user.yml  dbt_project.yml  profiles.yml
agro_credit_transform/models/marts/: _marts__model.yml  fct_compliance_risk.sql
agro_credit_transform/models/staging/: _sources.yml  _stg__models.yml  _stg_topography.yml  sources.yml  stg_ana_app_zones.sql  stg_funai_terras_indigenas.sql  stg_ibama.sql  stg_ibge_bc250_app_zones.sql  stg_ibge_biomes.sql  stg_incra_quilombola_lands.sql  stg_mte_slave_labor.sql  stg_property_app_ndvi.sql  stg_property_topography.sql  stg_sigef.sql
agro_credit_transform/models/staging/car/: stg_car_environmental_themes.sql  stg_car_overlaps.sql  stg_car_owners.sql  stg_car_properties.sql
agro_credit_transform/tests/: assert_adjacency_risk_flagged_correctly.sql  assert_app_degradation_block.sql  assert_biome_legal_reserve_match.sql  assert_car_owners_uniqueness.sql  assert_car_status_block_integrity.sql  assert_car_status_is_active.sql  assert_critical_amazon_compliance.sql  assert_embargo_post_2008_blocked.sql  assert_fuzzy_match_did_not_explode.sql  assert_geometries_are_valid.sql  assert_mapbiomas_post_2008_blocked.sql  assert_mapbiomas_status_integrity.sql  assert_no_eligible_on_indigenous_land.sql  assert_no_eligible_on_protected_areas.sql  assert_no_eligible_on_quilombola_land.sql  assert_no_eligible_on_slave_labor_land.sql  assert_no_eligible_on_social_risk_areas.sql  assert_no_empty_geometries.sql  assert_no_low_confidence_social_risk.sql  assert_no_negative_areas.sql  assert_overlap_not_greater_than_property.sql  assert_satellite_data_is_fresh.sql  assert_status_logic_coherence.sql  assert_status_matches_hard_block_flags.sql
airflow/: .airflowignore  airflow.cfg
airflow/dags/: 01_test_infra.py
airflow/dags/ingestion/: dag_ibama.py  dag_ingestion_brazil_reference_geodata.py  dag_ingestion_car.py  dag_ingestion_hydro_app_zones.py  dag_ingestion_mapbiomas.py  dag_ingestion_mte_slave_labor.py  dag_satellite_app_auditor.py  dag_satellite_ground_truth.py  dag_sigef.py
airflow/dags/transformation/: dag_dbt_transform.py
assets/: style.css
data/raw/: Sigef_Brasil_MT.shx
legacy/: download_ibama_source_legacy.py
notebooks/: 01_etl_ibama_embargos_mt_postgis.ipynb  02_ingest_sigef_mt_raw.ipynb.ipynb  clean_.ipynb  extract.ipynb
scripts/: ingest_ibge_biomes.py
src/: load_ibama.py  load_sigef.py
utils/: gee_handler.py
(+2 files in other folders)
