[project]
name = "carbon-credit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.3",
    "numpy==1.26.4",
    "pandas>=2.2.2,<3.0.0",
    "geopandas>=1.0.1",
    "pyogrio>=0.9.0",
    "pyproj",
    "shapely>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "geoalchemy2>=0.15.0",
    "sqlalchemy>=2.0.30",
    "dbt-postgres>=1.7.0",
    "dbt-bigquery>=1.11.0",
]
